# anti_chaos

./: .dockerignore  .gitignore  README.md  architecture.md  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  vite.config.js
backend/: Dockerfile  __init__.py  config.py  main.py
backend/api/: __init__.py  answers.py  progress.py  questions.py  settings.py  spheres.py  users.py
backend/database/: __init__.py  crud.py  database.py  migrate_guest_ip.py  migrate_settings.py  migrate_spheres.py  migrate_user_profile.py  models.py
backend/services/: __init__.py  progress_service.py  question_service.py  telegram_auth.py
bot/: Dockerfile  __init__.py  bot.py  config.py
bot/services/: notification_service.py
frontend/: Dockerfile  index.html  nginx.conf
frontend/src/: App.jsx  index.jsx
frontend/src/components/: Account.jsx  AnswerForm.jsx  Button.css  Button.jsx  ChangeFocusSpheres.jsx  Confirmation.jsx  DailyQuestion.jsx  DailySummary.jsx  EditSphereRating.jsx  FormatExplanation.jsx  ImprovementPlanPresale.jsx  Layout.jsx  Menu.jsx  MenuButton.jsx  MiniReward.jsx  MonthlyReport.jsx  Progress.jsx  QuestionDatabase.jsx  ReturnAfterPause.jsx  Settings.jsx  SimpleQuestion.jsx  SituationAnalysis.jsx  SphereManagement.jsx  SphereRating.jsx  SphereSelection.jsx  SpiderChart.jsx  Subscription.jsx  SubscriptionSuccess.jsx  WeeklySummary.jsx  WelcomeScreen.jsx
frontend/src/services/: api.js  telegram.js
frontend/src/styles/: components.css  main.css
frontend/src/utils/: chart.js  constants.js  theme.js  useTheme.js
